Updated CORS config, and template loading